# GFDC

./: CMakeLists.txt  README.txt
cmake/: FindFLTK.cmake  FindGDAL.cmake  FindGDAL.cmake.bak  thirdparty.cmake  thirdparty.cmake.bak
config/: example.xml
module/: CMakeLists.txt
module/spdlog/: CMakeLists.txt  LogIF.h
module/spdlog/include/spdlog/: spdlog.h
module/src/: Algo.cpp  Algo.h  AreaCount.h  CCBaseTypeDefine.h  CMakeLists.txt  GFimg.cpp  GFimg.h  GFmain.cpp  Image.h  NXLog.h  cal_gf.cpp  config.h  geoshape.cpp  geoshape.h  io.cpp  io.h  main.cpp  products.h  setting.h  test.cpp
module/src/config/: example.xml
